styling and spacing fixes, migrate to sass

--- a/src/styles/LeaveQueueModal.scss
+++ b/src/styles/LeaveQueueModal.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     font-family: "Roboto";
-    font-weight: 400px;
+    font-weight: 400;
     background-color: rgba(112, 112, 112,0.8);
     animation: fade 0.6s;
 }
@@ -20,7 +20,7 @@
     background-color: white;
     border-radius: 8px;
     height: 180px;
-    width: 50%;
+    width: 480px;
     animation: moveUp 0.6s;
 
     .leave-queue-button {
@@ -65,6 +65,31 @@
         cursor: pointer;
         transition: background-color 0.3s;
     }
+
+    .leave-queue-body {
+        display: "flex";
+        flex-direction: "column";
+
+        .leave-queue-buttons {
+            display: "flex";
+            justify-content: "center";
+            margin-bottom: "15px";
+            margin-top: "15px";
+            text-transform: "none";
+            .cancel-button {
+                font-weight: "normal";
+                border-color: "#3594F1"; 
+                color: "#6597D6"; 
+                margin-left: "0.5rem";
+                margin-right: "12.5rem";
+            }
+            
+            .remove-button {
+                font-weight: "normal";
+                background-color: "#A42921";
+            }
+        }
+    }
 }
 
 .leave-queue-prompt {
@@ -76,8 +101,8 @@
 
 @media screen and (max-width: 850px) {
     .leave-queue-container {
-        height: 200px;
-        width: 80%;
+        height: 145px;
+        width: 380px;
         img {
             margin-top: 50px;
             height: 30px;
@@ -88,6 +113,17 @@
         }
         .leave-queue-option {
             font-size: 12px;
+        }
+        .cancel-button {
+            font-weight: "normal";
+            border-color: "#3594F1"; 
+            color: "#6597D6"; 
+            margin-left: "0.5rem";
+            margin-right: "12.5rem";
+        }
+        .remove-button {
+            font-weight: "normal";
+            background-color: "#A42921";
         }
     }
 }
